--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/marita30/webPack/issues"
   },
-  "homepage": "https://github.com/marita30/webPack#readme"
+  "homepage": "https://github.com/marita30/webPack#readme",
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
