--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "css-loader": "^3.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "style-loader": "^1.2.1"
   }
 }
