--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-react": "^7.10.1",
     "@babel/preset-stage-2": "^7.8.3",
     "babel-loader": "^8.1.0",
+    "postcss-loader": "^3.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
