--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@babel/preset-stage-2": "^7.8.3",
+    "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
     "postcss-loader": "^3.0.0",
     "webpack": "^4.43.0",
