--- a/.babelrc
+++ b/.babelrc
@@ -7,8 +7,14 @@
                 "targets": {
                     "browsers": ["> 1%", "last 2 versions"]
                 }
-                
+
             }
-        ]
+        ],
+
+        "@babel/preset-react"
+    ],
+
+    "plugins": [
+        "@babel/plugin-proposal-class-properties"
     ]
 }
