Agregando despues de license un browserlist que es el mismos que esta en el archivo .babelrc en Target que es la configuracion de la web

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "author": "",
   "license": "ISC",
+  "browserlist": "> 1%, last 2 versions",
   "bugs": {
     "url": "https://github.com/marita30/webPack/issues"
   },
