--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
     "postcss-loader": "^3.0.0",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
