--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-stage-2": "^7.8.3",
     "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
+    "html-webpack-plugin": "^4.3.0",
     "postcss-loader": "^3.0.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
